# wealthgrabber

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
src/wealthgrabber/: accounts.py  activities.py  assets.py  auth.py  cli.py  formatters.py  models.py
tests/: test_accounts.py  test_activities.py  test_assets.py  test_auth.py  test_cli.py
