[project]
name = "wealthgrabber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyring>=25.7.0",
    "requests>=2.32.5",
    "ws-api>=0.28.1",
    "typer>=0.9.0",
]

[project.scripts]
wealthgrabber = "wealthgrabber.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "memvid-sdk>=2.0.148",
    "networkx>=3.6.1",
    "pathspec>=1.0.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "memvid-sdk>=2.0.147",
    "watchdog>=6.0.0",
]
